// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvSearch should render correctly when \`clearAriaLabel\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="test clear aria label" aria-label="test clear aria label" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`formItem\` is false 1`] = `
<cv-wrapper-stub tagtype="" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl cv-search"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`kind\` is toolbar 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl bx--toolbar-search"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" aria-label="Toolbar search" class="bx--toolbar-search__btn">
      <anonymous-stub class="bx--search-magnifier"></anonymous-stub>
    </button>
    <!----> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button></div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`placeholder\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="test placeholder" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is large 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--lg"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is small 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--sm"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`size\` is xl 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly when \`toolbarAriaLabel\` is set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl bx--toolbar-search"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input"> <button type="button" aria-label="test toolbar aria label" class="bx--toolbar-search__btn">
      <anonymous-stub class="bx--search-magnifier"></anonymous-stub>
    </button>
    <!----> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button></div>
</cv-wrapper-stub>
`;

exports[`CvSearch should render correctly with only \`value\` prop set 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-search bx--form-item">
  <div role="search" class="bx--search bx--search--xl"><label for="test-1" class="bx--label"></label> <input id="test-1" type="text" role="search" placeholder="Search" aria-labelledby="test-1" class="bx--search-input">
    <!---->
    <anonymous-stub class="bx--search-magnifier"></anonymous-stub> <button type="button" title="Clear search input" aria-label="Clear search input" class="bx--search-close">
      <close16-stub></close16-stub>
    </button>
  </div>
</cv-wrapper-stub>
`;
